Header completed, flex spacing fixed

--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 body { 
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Roboto;
+    margin: 0;
 }
 
 .section-1 { 
-    background-color: #1F2937;
-    height: 500px;
-    position: relative;
-    margin: 0;
-    padding: 0;
-    width: 100%;
+    background-color: #1f2937;
+    
 }
 
-.flex-container { 
-    display: flex;
-    flex-direction: row;
-    gap: 50px; 
-    padding: 10px;
-    position: absolute; 
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+.header {
+    display: flex; 
+    align-items: center;
+    justify-content: space-around;
 }
 
 .logo { 
     color: #f9faf8;
-    font-size: 24px;
     font-weight: bold;
-    flex-grow: 2;
-    margin-left: 100px;
+    font-size: 24px;
 }
 
-.link { 
+ul { 
+    display: flex;
+    gap: 16px; 
+    list-style: none;
     color: #e5e7eb;
     font-size: 18px;
 }
